// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio checked set to false 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  checked={false}
  className="c0"
  type="radio"
/>
`;

exports[`Radio checked set to true 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  checked={true}
  className="c0"
  type="radio"
/>
`;

exports[`Radio default 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  className="c0"
  type="radio"
/>
`;

exports[`Radio should accept disabled 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  className="c0"
  disabled={true}
  type="radio"
/>
`;

exports[`Radio with aria-describedby 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  aria-describedby="some-id"
  className="c0"
  type="radio"
/>
`;

exports[`Radio with name and id 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

<input
  className="c0"
  id="Chucky"
  name="Chuck"
  type="radio"
/>
`;
